ccenter/main/default/objects/Household_Income_Cap__c/Household_Income_Cap__c.object-meta.xml
<CustomObject>
    <label>Household Income Cap</label>
    <nameField>
        <displayFormat>HIC-{0000}</displayFormat>
        <label>Household Income Cap Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Household Income Caps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>