ccenter/main/default/objects/Household_Income_Cap__c/fields/Income_Cap__c.field-meta.xml
<CustomField>
    <fullName>Income_Cap__c</fullName>
    <label>Income Cap</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>