ccenter/main/default/objects/Household_Income_Cap__c/fields/Number_of_Household_Members__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Household_Members__c</fullName>
    <description>The actual number of people receiving nutritional assistance at an address</description>
    <label>Number of Household Members</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>